tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_inheritance_errors@component_error_in_extended_parent.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/inheritance/component_error_in_extended_parent.txt
---
error: Cannot divide by 0
 --> comp:1:30
  |
1 | {% component Boom() %}{{ 1 / 0 }}{% endcomponent Boom %}
  |                              ^

note: called from base:3:4
  |
3 | {{ <Boom/> }}
  |    ^^^^^^^
